# pet_shop

./: pyproject.toml
pet_shop/: settings.py
