[tool.poetry]
name = "pet-shop"
version = "0.1.0"
description = "Adopt Don't Shop from Mod 2 in Python/Django"
authors = ["Trevor Suter <Trevorsuter@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
python-decouple = "^3.4"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
